--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.shp filter=lfs diff=lfs merge=lfs -text
 photo_description_STM.csv filter=lfs diff=lfs merge=lfs -text
+MPA_Project_v1.ipynb filter=lfs diff=lfs merge=lfs -text
